# sql-server-connector

./: .env.example  .gitignore  DEPLOYMENT-PLAN.md  Makefile  README.md  architecture.md  docker-compose.nextjs.yml  docker-compose.yml
containers/datagen/: Dockerfile  generator.py  pyproject.toml
containers/fastapi/: Dockerfile  main.py  pyproject.toml
containers/nextjs/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
containers/nextjs/app/: globals.css  layout.tsx  page.tsx  providers.tsx
containers/nextjs/app/demo/: page.tsx
containers/nextjs/app/incremental/: page.tsx
containers/nextjs/app/network/: page.tsx
containers/nextjs/app/setup/: SetupForm.tsx  page.tsx
containers/nextjs/app/simulator/: page.tsx
containers/nextjs/app/snapshot/: page.tsx
containers/nextjs/components/: CodeBlock.tsx  ConnectionBadge.tsx  DataTable.tsx  DonutChart.tsx  GaugeChart.tsx  SectionHeader.tsx  StackedBarChart.tsx  StatCard.tsx  index.ts
containers/nextjs/hooks/: useSSE.ts
containers/sqlserver/: Dockerfile  init.sql  startup.sh
containers/streamlit/: Dockerfile  Home.py  app.py  components.py  db.py  pyproject.toml  theme.py
containers/streamlit/.streamlit/: config.toml
containers/streamlit/pages/: 1_Setup.py  2_Simulator.py  3_Demo_Script.py  page_1_setup.py  page_2_simulator.py  page_3_monitor.py  page_4_demo_script.py
scripts/: push-images.sh  test-local.sh
setup/: 01-create-objects.sql  02-create-service.sql  99-cleanup.sql
skills/: DEPLOY-OPENFLOW-CONNECTOR.md  DEPLOY-SQL-SERVER.md
(+12 files in other folders)
