[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datagen"
version = "0.1.0"
description = "SQL Server CDC data generator"
dependencies = [
    "faker",
    "pyodbc",
    "python-dotenv"
]
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["."]